--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
     <head>
         <meta name="viewport"
         content="width=device-width, initial-scale=1.0">
-        <title> Jasmine Photography</title>
+        <title> Black-NWhite Photography</title>
         <style align="center"  >
             .box {
                 width:830px;
@@ -57,7 +57,7 @@
         <div class=box>
          <div class= c0>          
             <img src="https://th.bing.com/th/id/R.776c48d444d47e54cbce642fcd8f3b93?rik=b7yzkPj0x0lO5w&riu=http%3a%2f%2f40.media.tumblr.com%2ff02cb9051a6fbaa3c7d2a7b753be4c37%2ftumblr_nkv8u3pmnq1rel1ijo1_500.jpg&ehk=Z81v%2fo9RxipWeFbGVC%2bfEdiZzhOG7zzT750S1a8o2LA%3d&risl=&pid=ImgRaw&r=0" width="450px" height="700px" align="right"> <br> <br><br><br><br><br>
-            <H2 align="center">JASMINE PHOTOGRAPHY </h2>
+            <H2 align="center">BLACK-N-WHITE PHOTOGRAPHY </h2>
             <p align= "center" > Aesthetic B&W Photography</p>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
             &nbsp;&nbsp;
             <button type="menu" value="view work" class=btn >View Work</button> </div>
